--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
     <center>
       <h1>🙏🏻佛教金句🙏🏻</h1>
+      <h2>Welcome~</h2>
       <img src="https://whatsticker.online/stickers_asset/ws-pack-755070k1YYOh4/c3180261b5538.webp" width="30%"><br>
       <button onclick="buddha()">🪷隨機金句🪷</button>
       <p id="goodluck"></p>
