--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <h1>🙏🏻佛教金句🙏🏻</h1>
       <h2>Welcome~</h2>
       <img src="https://whatsticker.online/stickers_asset/ws-pack-755070k1YYOh4/c3180261b5538.webp" width="30%"><br>
+      <img src="https://github.com/heidi-tra/attendance/blob/main/so-is-this-kid-actually-budha-im-replaying-the-game-and-i-v0-fcxygl8ls7yd1.webp">
       <button onclick="buddha()">🪷隨機金句🪷</button>
       <p id="goodluck"></p>
     </center>  
@@ -33,3 +34,4 @@ function buddha(){
             
         
     </body>
+√
