--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>🙏🏻佛教金句🙏🏻</h1>
       <h2>Welcome~</h2>
       <img src="https://whatsticker.online/stickers_asset/ws-pack-755070k1YYOh4/c3180261b5538.webp" width="30%"><br>
-      <img src="https://github.com/heidi-tra/attendance/blob/main/black-myth-wukong-lore-blogroll-1724174203904.avif">
+      <img src="black-myth-wukong-lore-blogroll-1724174203904.avif">
       <button onclick="buddha()">🪷隨機金句🪷</button>
       <p id="goodluck"></p>
     </center>  
